# zero-2-prod

./: Cargo.toml  README.md
migrations/: 20221103065907_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
