[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Gerardo Sorchini <gsorchini@ea.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
config = "0.13"
dotenvy = "0.15.6"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
